# pyhugodoc

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyhugodoc.yaml  pyproject.toml
docs/: config.toml
docs/content/: _index.md  index.md
docs/content/Tutorial/: _index.md  getting-started.md
docs/content/_api-reference/: filegen.md  handler.md  inventory.md
docs/content/api-reference/: _index.md  filegen.md  handler.md  inventory.md
docs/layouts/partials/: logo.html
pyhugodoc/: README.md  __main__.py  filegen.py  handler.py  inventory,py  inventory.py
