[tool.poetry]
name = "pyhugodoc"
version = "0.1.0"
description = "Documentation for Python Projects, with Hugo"
authors = ["anand2312 <anandkrishna2312@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
sphobjinv = "^2.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
